2023-01-11  Karl Berry  <karl@freefriends.org>

	* tugboat.bst: doc fix.
	* tugboat.dtx (\tburl): define to be \tbsurl (or \url),
	since that works ok in all cases now.
	(\@listii): doc list spacing parameters.

	* Makefile (bibcheck): new target.

2022-11-06  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx (\hyphenation): add Lua-Meta.
	Add pc/pt/bp/in conversions for our page geometry.

2022-10-26  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx (\tubline): \hbox to \hsize.
	(\titleref): better name for \booktitle (\let latter).

2022-09-18  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx (\cs, \tubbraced): use \texorpdfstring.

2022-09-03  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx (\pdfTeX): define, another unnecessary macro people
	like to use.
	* tugboat.dtx (\tbsurl@): if url starts with http://, just use it,
	do not prepend https://. This is so we can \let\url\tbsurl for
	bibliographies, which sometimes have http urls.

2022-06-28  Karl Berry  <karl@freefriends.org>

	* tugboat.bst (ctan): do not complain about empty date or note
	fields (for voss articles).
	
	* ltubguid.ltx: convention for multiple citations.
	
	* tugboat.dtx: doc.

2022-05-19  Karl Berry  <karl@freefriends.org>

	* version 2.27 (2022-05-19) uploaded to CTAN.

	* tugboat.dtx (\eTeX): use \boldsymbol if available.
	
	* tugboat.dtx (\nameref): only define \AtBeginDocument,
	to avoid overwriting warning from new hyperref.
	
	* ltubguid.ltx: wording.

2022-04-10  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx (\tbsfootnoteurl, \tbhfootnoteurl): new definitions,
	since bb says she can use them.
	* ltubguid.ltx (Explanations): document them.
	* tubrfootest.tex: test \tbsfootnoteurl and \tbhfootnoteurl.

2022-04-09  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx (\KOMAScript): allow break at hyphen.

2021-11-24  Karl Berry  <karl@freefriends.org>

	* tugboat.bst: blank lines.

2021-10-29  Karl Berry  <karl@freefriends.org>

	* tugboat.bst: typo.
