@@ -1,9 +1,9 @@
 % $Id$
 % Public domain.
-% test that ltugboat works with varioref.
 \documentclass{ltugboat}
 
 \begin{document}
 
-{\makevmeta \verb|!<foo>|}
+% need to be inside verbatim.
+%{\makevmeta \verb|!<foo>|}
 \end{document}
